--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --base-href=/QikNotes/ && npx angular-cli-ghpages --dir=dist/QikNotes"
+    "deploy": "ng build --base-href=/QikNotes/ && npx angular-cli-ghpages --dir=dist/QikNotes/browser",
+    "vercel-build": "ng build --configuration production"
   },
   "prettier": {
     "printWidth": 100,
